--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,16 @@
-org.gradle.jvmargs       = -Xmx1G
+org.gradle.jvmargs             = -Xmx1G
 
 #Fabric properties
-minecraft_major_version  = 1.18
-minecraft_version        = 1.18-pre1
-yarn_mappings            = 1.18-pre1+build.3
-loader_version           = 0.12.5
+minecraft_major_version        = 1.18
+minecraft_version              = 1.18-pre1
+yarn_mappings                  = 1.18-pre1+build.3
+loader_version                 = 0.12.5
 
 #Mod properties
-mod_version              = 1.1.0
-mod_release              = release
-mod_mc_versions          = 1.18-pre1
-mod_mc_version_specifier = 1.18-pre1+
-maven_group              = de.siphalor
-archives_base_name       = nmuk
+mod_version                    = 1.1.0
+mod_release                    = release
+mod_mc_versions                = 1.17;1.17.1;1.18-pre1;1.18
+mod_mc_version_specifier       = 1.17+
+maven_group                    = de.siphalor
+archives_base_name             = nmuk
+target_minecraft_major_version = multiversion
