Expand version support: Now supports MC versions 1.14 - 1.18.1

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_16
+targetCompatibility = JavaVersion.VERSION_1_8
 
 archivesBaseName = project.archives_base_name
 version = "$mod_version+mc$minecraft_version".toString()
@@ -40,19 +40,22 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	modImplementation("de.siphalor:amecsapi-${project.target_minecraft_major_version}:1.3.3+") {
+	modImplementation("de.siphalor:amecsapi-${project.target_minecraft_major_version}:1.3.4+") {
 		exclude group: "net.fabricmc.fabric-api"
 		exclude module: "nmuk-${project.target_minecraft_major_version}"
 	}
 
+    include(modApi("com.github.Klotzi111:TransformerInterceptor:main-SNAPSHOT"))
+
+	// we need those old api versions because newer versions require java 16 and that is not available on older minecraft versions
+	// these old fabric apis are required because we want to support down to minecraft 1.14
 	def fabric_deps = [
-			"fabric-api-base"          : "0.4.0+65d505fc9c",
-			"fabric-key-binding-api-v1": "1.0.5+65d505fc9c",
-			"fabric-resource-loader-v0": "0.4.9+65d505fc9c"
+			"fabric-api-base"		   : "0.1.2+de26dc4942",
+			"fabric-key-binding-api-v1": "1.0.2+4ea4772942",
+			"fabric-resource-loader-v0": "0.1.5+4ea4772942"
 	]
 	for (dep in fabric_deps.entrySet()) {
-		modApi "net.fabricmc.fabric-api:" + dep.getKey() + ":" + dep.getValue()
-		include "net.fabricmc.fabric-api:" + dep.getKey() + ":" + dep.getValue()
+		include(modApi("net.fabricmc.fabric-api:" + dep.getKey() + ":" + dep.getValue()))
 	}
 
 	modRuntimeOnly("com.github.astei:lazydfu:master-SNAPSHOT")
@@ -68,11 +71,17 @@ license {
 
 processResources {
 	inputs.property "version", version
+	inputs.property "compiledWithMinecraftSourceVersion", minecraft_version
 
 	afterEvaluate {
 		from(sourceSets.main.resources.srcDirs) {
 			include "fabric.mod.json"
 			expand "version": version
+			duplicatesStrategy DuplicatesStrategy.INCLUDE
+		}
+		from(sourceSets.main.resources.srcDirs) {
+			include "mappings/compiledWithMinecraftSourceVersion.txt"
+			expand "compiledWithMinecraftSourceVersion": minecraft_version
 			duplicatesStrategy DuplicatesStrategy.INCLUDE
 		}
 	}
