--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,19 @@
 plugins {
-	id 'fabric-loom' version '0.10-SNAPSHOT'
+	id 'fabric-loom' version '0.12-SNAPSHOT'
 	id 'maven-publish'
 	id 'com.matthewprenger.cursegradle' version '1.4.0'
-	id 'com.modrinth.minotaur' version '1.2.1'
+	id 'com.modrinth.minotaur' version '2.1.1'
 	id 'org.cadixdev.licenser' version '0.6.1'
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+ext {
+	jdk_version = 8
+	
+	klotzi111_localDeps = "true".equals(System.getenv("klotzi111_localDeps"))
+}
+
+sourceCompatibility = jdk_version
+targetCompatibility = jdk_version
 
 archivesBaseName = project.archives_base_name
 version = "$mod_version+mc$minecraft_version"
@@ -20,14 +26,17 @@ sourceSets {
 	}
 }
 
-minecraft {
-}
-
 repositories {
 	mavenLocal()
 	maven {
 		name "Siphalor's Maven"
 		url "https://maven.siphalor.de"
+	}
+	maven {
+		url "https://cursemaven.com"
+		content {
+			includeGroup "curse.maven"
+		}
 	}
 	maven {
 		url "https://jitpack.io"
@@ -40,18 +49,21 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	modImplementation("de.siphalor:amecsapi-${project.target_minecraft_major_version}:1.3.4+mc1.18-pre1") {
-		exclude group: "net.fabricmc.fabric-api"
-		exclude module: "nmuk-${project.target_minecraft_major_version}"
-	}
-
 	// TransformerInterceptor
-	include(modApi("com.github.Klotzi111:TransformerInterceptor:main-SNAPSHOT"))
+	include(modApi(klotzi111_localDeps ? "de.klotzi111:TransformerInterceptor:1+" : "com.github.Klotzi111:TransformerInterceptor:main-SNAPSHOT"))
+	
+	// FabricMultiVersionHelper
+	include(modApi(klotzi111_localDeps ? "de.klotzi111:FabricMultiVersionHelper:1+" : "com.github.Klotzi111:FabricMultiVersionHelper:main-SNAPSHOT"))
 	
 	// Controlling
-	modImplementation("com.blamejared.controlling:Fabric:9.0") {
-		exclude(group: "com.blamejared.controlling")
+	modCompileOnly("curse.maven:Controlling-250398:3822621")
+
+	// Amecs API
+	testmodImplementation(klotzi111_localDeps ? "de.siphalor:amecsapi-${project.target_minecraft_major_version}:1+" : "com.github.Klotzi111:amecs-api:main-SNAPSHOT") {
+		exclude(group: "*")
 	}
+	
+	testmodRuntimeOnly("com.github.astei:lazydfu:master-SNAPSHOT")
 
 	// we need those old api versions because newer versions require java 16 and that is not available on older minecraft versions
 	// these old fabric apis are required because we want to support down to minecraft 1.14
@@ -63,8 +75,6 @@ dependencies {
 	for (dep in fabric_deps.entrySet()) {
 		include(modApi("net.fabricmc.fabric-api:" + dep.getKey() + ":" + dep.getValue()))
 	}
-
-	modRuntimeOnly("com.github.astei:lazydfu:master-SNAPSHOT")
 
 	testmodImplementation sourceSets.main.output
 }
@@ -93,11 +103,13 @@ processResources {
 	}
 }
 
-// ensure that the encoding is set to UTF-8, no matter what the system default is
-// this fixes some edge cases with special characters not displaying correctly
-// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
 tasks.withType(JavaCompile) {
+	// ensure that the encoding is set to UTF-8, no matter what the system default is
+	// this fixes some edge cases with special characters not displaying correctly
+	// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
+	// If Javadoc is generated, this must be specified in that task too.
 	options.encoding = "UTF-8"
+	options.release = jdk_version
 }
 
 // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
@@ -119,6 +131,7 @@ publishing {
 			artifactId = "${project.archives_base_name}-${project.target_minecraft_major_version}"
 
 			from components.java
+			java.withSourcesJar()
 		}
 	}
 
@@ -161,20 +174,18 @@ task uploadToModSites {
 	group = "upload"
 }
 
-if (project.hasProperty("siphalorCurseForgeApi")) {
+if (project.hasProperty("curseforgeToken")) {
 	curseforge {
-		apiKey project.siphalorCurseForgeApi
-		def changes = getChangelog()
+		apiKey project.curseforgeToken
 		project {
 			id = "438172"
 			releaseType = project.mod_release
 			changelogType = "markdown"
-			changelog = changes
+			changelog = project.getChangelog()
 			addGameVersion("Fabric")
-			/*for (version in ((String) project.mod_mc_versions).split(";")) {
+			for (version in ((String) project.mod_mc_versions).split(";")) {
 				addGameVersion(version)
-			}*/
-			addGameVersion("1.17")
+			}
 			relations {
 				embeddedLibrary "fabric-api"
 				optionalDependency "amecs"
@@ -187,23 +198,18 @@ if (project.hasProperty("siphalorCurseForgeApi")) {
 	uploadToModSites.finalizedBy(tasks.curseforge)
 }
 
-import com.modrinth.minotaur.TaskModrinthUpload
-if (project.hasProperty("siphalorModrinthApi")) {
-	task modrinth (type: TaskModrinthUpload) {
-		group = "upload"
-		dependsOn(build)
-
-		token = project.siphalorModrinthApi
-		projectId = "YCcdA1Lp"
-		versionNumber = version
-		versionName = "[${project.mod_mc_version_specifier}] ${project.mod_version}"
-		changelog = getChangelog()
-		uploadFile = remapJar
-		versionType = project.mod_release
-		for (version in ((String) project.mod_mc_versions).split(";")) {
-			addGameVersion(version)
-		}
-		addLoader("fabric")
+modrinth {
+	if (project.hasProperty("modrinthToken")) {
+		token = project.modrinthToken
+		uploadToModSites.finalizedBy(tasks.modrinth)
 	}
-	uploadToModSites.finalizedBy(tasks.modrinth)
+
+	projectId = "YCcdA1Lp"
+	versionName = "[${project.mod_mc_version_specifier}] ${project.mod_version}"
+	versionType = project.mod_release
+	changelog = project.getChangelog()
+	uploadFile = remapJar
+	gameVersions = project.mod_mc_versions.split(";") as List<String>
+	loaders = ["fabric"]
 }
+tasks.modrinth.group = "upload"
