--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,15 @@
 org.gradle.jvmargs             = -Xmx1G
 
 #Fabric properties
-minecraft_major_version        = 1.18
-minecraft_version              = 1.18.1
-yarn_mappings                  = 1.18.1+build.22
-loader_version                 = 0.13.1
+minecraft_major_version        = 1.19
+minecraft_version              = 1.19
+yarn_mappings                  = 1.19+build.1
+loader_version                 = 0.14.7
 
 #Mod properties
-mod_version                    = 1.3.0
+mod_version                    = 1.3.1
 mod_release                    = release
-mod_mc_versions                = 1.14;1.14.1;1.14.2;1.14.3;1.14.4;1.15;1.15.1;1.15.2;1.16;1.16.1;1.16.2;1.16.3;1.16.4;1.16.5;1.17;1.17.1;1.18;1.18.1
+mod_mc_versions                = 1.14;1.14.1;1.14.2;1.14.3;1.14.4;1.15;1.15.1;1.15.2;1.16;1.16.1;1.16.2;1.16.3;1.16.4;1.16.5;1.17;1.17.1;1.18;1.18.1;1.18.2;1.19
 mod_mc_version_specifier       = 1.14+
 maven_group                    = de.siphalor
 archives_base_name             = nmuk
